tests/snapshots/parser_snapshots__parser_all@ast-85.snap
---
source: tests/parser_snapshots.rs
expression: ast
input_file: examples/spec/02_variables/block_expression.of
---
Err(
    "unexpected token 'var'",
)
