tests/snapshots/parser_snapshots__parser_all@ast-86.snap
---
source: tests/parser_snapshots.rs
expression: ast
input_file: examples/spec/02_variables/var_from_if.of
---
Err(
    "unexpected token 'var'",
)
