tests/snapshots/parser_snapshots__parser_all@ast-9.snap
---
source: tests/parser_snapshots.rs
expression: ast
input_file: examples/language/09_extensions.of
---
Ok(
    Program {
        items: [
            Item {
                kind: Import(
                    ImportDecl {
                        module: "of:core",
                        symbols: Named(
                            [
                                ImportSymbol {
                                    name: "print",
                                    alias: None,
                                },
                            ],
                        ),
                    },
                ),
                span: Span {
                    line: 1,
                    col: 7,
                    len: 6,
                },
            },
            Item {
                kind: Struct(
                    StructDecl {
                        name: "Vehicle",
                        is_extern: false,
                        generics: [],
                        fields: [
                            FieldDecl {
                                name: "speed",
                                ty: Primitive(
                                    Int32,
                                ),
                                is_pointer: false,
                            },
                        ],
                        methods: [],
                        implements: [],
                    },
                ),
                span: Span {
                    line: 3,
                    col: 7,
                    len: 6,
                },
            },
            Item {
                kind: Extend(
                    ExtendDecl {
                        target: Named(
                            "Vehicle",
                            [],
                        ),
                        generic_params: [],
                        implements: [],
                        methods: [
                            FunctionDecl {
                                name: "is_fast",
                                has_self_param: true,
                                is_extern: false,
                                generics: [],
                                return_type: Some(
                                    Primitive(
                                        Bool,
                                    ),
                                ),
                                params: [],
                                body: Some(
                                    Block {
                                        statements: [],
                                        returns: Some(
                                            BinaryOp(
                                                Member(
                                                    SelfRef,
                                                    "speed",
                                                ),
                                                Gt,
                                                Literal(
                                                    Int(
                                                        "100",
                                                    ),
                                                ),
                                            ),
                                        ),
                                    },
                                ),
                                span: Span {
                                    line: 8,
                                    col: 11,
                                    len: 8,
                                },
                            },
                        ],
                    },
                ),
                span: Span {
                    line: 7,
                    col: 7,
                    len: 6,
                },
            },
            Item {
                kind: Interface(
                    InterfaceDecl {
                        name: "Movable",
                        generics: [],
                        fields: [],
                        methods: [
                            FunctionDecl {
                                name: "move",
                                has_self_param: true,
                                is_extern: false,
                                generics: [],
                                return_type: Some(
                                    Primitive(
                                        String,
                                    ),
                                ),
                                params: [],
                                body: None,
                                span: Span {
                                    line: 14,
                                    col: 11,
                                    len: 8,
                                },
                            },
                        ],
                        implements: [],
                    },
                ),
                span: Span {
                    line: 13,
                    col: 10,
                    len: 9,
                },
            },
            Item {
                kind: Extend(
                    ExtendDecl {
                        target: Named(
                            "Vehicle",
                            [],
                        ),
                        generic_params: [],
                        implements: [
                            Named(
                                "Movable",
                                [],
                            ),
                        ],
                        methods: [
                            FunctionDecl {
                                name: "move",
                                has_self_param: true,
                                is_extern: false,
                                generics: [],
                                return_type: Some(
                                    Primitive(
                                        String,
                                    ),
                                ),
                                params: [],
                                body: Some(
                                    Block {
                                        statements: [],
                                        returns: Some(
                                            If(
                                                Call(
                                                    Member(
                                                        SelfRef,
                                                        "is_fast",
                                                    ),
                                                    [],
                                                    [],
                                                ),
                                                Block {
                                                    statements: [],
                                                    returns: Some(
                                                        Literal(
                                                            String(
                                                                "The vehicle zooms",
                                                            ),
                                                        ),
                                                    ),
                                                },
                                                Some(
                                                    Block {
                                                        statements: [],
                                                        returns: Some(
                                                            Literal(
                                                                String(
                                                                    "The vehicle moves",
                                                                ),
                                                            ),
                                                        ),
                                                    },
                                                ),
                                            ),
                                        ),
                                    },
                                ),
                                span: Span {
                                    line: 18,
                                    col: 11,
                                    len: 8,
                                },
                            },
                        ],
                    },
                ),
                span: Span {
                    line: 17,
                    col: 7,
                    len: 6,
                },
            },
            Item {
                kind: Function(
                    FunctionDecl {
                        name: "main",
                        has_self_param: false,
                        is_extern: false,
                        generics: [],
                        return_type: Some(
                            Primitive(
                                Int64,
                            ),
                        ),
                        params: [],
                        body: Some(
                            Block {
                                statements: [
                                    VarDecl(
                                        "slow",
                                        None,
                                        Some(
                                            StructInit(
                                                Named(
                                                    "Vehicle",
                                                    [],
                                                ),
                                                [
                                                    (
                                                        "speed",
                                                        Literal(
                                                            Int(
                                                                "40",
                                                            ),
                                                        ),
                                                    ),
                                                ],
                                            ),
                                        ),
                                    ),
                                    VarDecl(
                                        "fast",
                                        None,
                                        Some(
                                            StructInit(
                                                Named(
                                                    "Vehicle",
                                                    [],
                                                ),
                                                [
                                                    (
                                                        "speed",
                                                        Literal(
                                                            Int(
                                                                "220",
                                                            ),
                                                        ),
                                                    ),
                                                ],
                                            ),
                                        ),
                                    ),
                                    Expr(
                                        Call(
                                            Variable(
                                                "print",
                                            ),
                                            [],
                                            [
                                                Call(
                                                    Member(
                                                        Variable(
                                                            "slow",
                                                        ),
                                                        "move",
                                                    ),
                                                    [],
                                                    [],
                                                ),
                                            ],
                                        ),
                                    ),
                                    Expr(
                                        Call(
                                            Variable(
                                                "print",
                                            ),
                                            [],
                                            [
                                                Call(
                                                    Member(
                                                        Variable(
                                                            "fast",
                                                        ),
                                                        "move",
                                                    ),
                                                    [],
                                                    [],
                                                ),
                                            ],
                                        ),
                                    ),
                                ],
                                returns: Some(
                                    Literal(
                                        Int(
                                            "0",
                                        ),
                                    ),
                                ),
                            },
                        ),
                        span: Span {
                            line: 27,
                            col: 9,
                            len: 8,
                        },
                    },
                ),
                span: Span {
                    line: 27,
                    col: 9,
                    len: 8,
                },
            },
        ],
    },
)
