tests/snapshots/parser_snapshots__parser_all@ast-91.snap
---
source: tests/parser_snapshots.rs
expression: ast
input_file: examples/spec/03_functions/lambdas.of
---
Err(
    "unexpected token 'var'",
)
