tests/snapshots/parser_snapshots__parser_all@ast-93.snap
---
source: tests/parser_snapshots.rs
expression: ast
input_file: examples/spec/02_variables/var_with_type.of
---
Err(
    "unexpected token 'var'",
)
