tests/snapshots/parser_snapshots__parser_all@ast-94.snap
---
source: tests/parser_snapshots.rs
expression: ast
input_file: examples/spec/04_structs_interfaces/interface_extends.of
---
Err(
    "unexpected token ','",
)
