tests/snapshots/parser_snapshots__parser_all@ast-95.snap
---
source: tests/parser_snapshots.rs
expression: ast
input_file: examples/spec/04_structs_interfaces/struct_basic.of
---
Err(
    "unexpected token ','",
)
