tests/snapshots/parser_snapshots__parser_all@ast-96.snap
---
source: tests/parser_snapshots.rs
expression: ast
input_file: examples/spec/04_structs_interfaces/struct_implements.of
---
Err(
    "unexpected token ','",
)
