tests/snapshots/parser_snapshots__parser_all@ast-97.snap
---
source: tests/parser_snapshots.rs
assertion_line: 19
expression: ast
input_file: examples/spec/02_variables/var_inferred.of
---
Err(
    "unexpected token 'var'",
)
